# rmcmc

./: .travis.yml  Cargo.toml  LICENSE.txt  README.md  colors.txt  mining.csv
.github/ISSUE_TEMPLATE/: bug_report.md
benches/: srwm_vector.rs
examples/: mining_disasters.rs  stochastic_volatility.rs  stochastic_volatility.rs_todo
src/: geweke.rs  lens.rs  lib.rs  likelihood.rs  parameter.rs  runner.rs  statistics.rs  stepper_mocks.rs  stepper_traits.rs  summary.rs  traits.rs  utils.rs
src/diagnostics/: mod.rs  rhat.rs
src/runner/: iter.rs  mod.rs  result.rs  runner.rs  runner_builder.rs  utils.rs
src/steppers/: binary_gibbs_metropolis.rs  binary_metropolis.rs  discrete_srwm.rs  group.rs  kameleon.rs  metropolis_hastings_utils.rs  mock.rs  mod.rs  srwm.rs  stepping_alg.rs  util.rs
src/steppers/adaptor/: global.rs  mod.rs  simple.rs  states.rs
src/steppers/adaptors/: adaptor_state.rs  global_adaptor.rs  mod.rs  simple.rs  traits.rs
src/steppers/discrete_srwm/: builder.rs  mod.rs  stepper.rs
src/steppers/group/: builder.rs  mod.rs  stepper.rs
src/steppers/helpers/: mh_accept_reject.rs  mod.rs
src/steppers/srwm/: builder.rs  mod.rs  stepper.rs
src/steppers/srwm/stepper/: mod.rs  scalar.rs  vector.rs
src/utils/: geweke.rs  likelihood.rs  mean_and_variance.rs  mod.rs  test.rs
tests/: mean_of_gaussian.rs  poisson_1d.rs  srwm.rs
