[package]
name = "rmcmc"
version = "0.1.0"
authors = ["Mike Schmidt <schmidmt@gmail.com>"]
description = "RMCMC is a Bayesian statistics toolkit with implements, among other algorithms, Markov-Chain-Monte-Carlo."
repository = "https://github.com/schmidmt/rmcmc"
license = "MIT"
categories = ["science"]
keywords = ["Probability", "Statistics", "Bayesian", "Machine-learning", "MCMC"]

[features]
serde_support = ["serde", "serde_derive", "nalgebra/serde-serialize"]

[badges]
travis-ci = { repository = "schmidmt/rmcmc", branch = "master" }
maintenance = { status = "actively-developed" }

[dependencies]
alga = "0.7.2"
alga_derive = "0.7.1"
generic-array = "0.12.0"
nalgebra = "0.16.13"
num = "0.2.0"
num-traits = "0.2"
rand = "0.6.1"
reduce = "0.1.1"
rv = "^0.4"
special = "0.7.8"
typenum = "1.10.0"
rayon = "1.0.3"

serde = {version = "1.0.70", optional = true}
serde_derive = {version = "1.0.70", optional = true}

[dev-dependencies]
assert = "0.7.4"
