[package]
name = "rmcmc"
version = "0.1.0"
authors = ["Mike Schmidt <schmidmt@gmail.com>"]
description = "RMCMC is a Bayesian statistics toolkit with implements, among other algorithms, Markov-Chain-Monte-Carlo."
repository = "https://github.com/schmidmt/rmcmc"
license = "MIT"
categories = ["science"]
keywords = ["Probability", "Statistics", "Bayesian", "Machine-learning", "MCMC"]
edition = "2018"

[features]
serde_support = ["serde", "serde_derive"]

[badges]
travis-ci = { repository = "schmidmt/rmcmc", branch = "master" }
maintenance = { status = "actively-developed" }

[dependencies]
log = "0.4"
num = "0.2"
rand = "0.7"
rv = "0.9"
typenum = "1"
rayon = "1.2"
itertools = "0.9"
serde = {version = "1.0", optional = true}
serde_derive = {version = "1.0", optional = true}
alga = "0.9"
nalgebra = "0.20"

[dev-dependencies]
assert = "0.7"
pseudo = "0.2"
serde_json = "1.0"
csv = "1.1"
special = "0.8"
env_logger = "0.7"
rand_xoshiro = "0.4"
